force-app/main/default/objects/Vetify_Monthly_Stats_Snapshot__c.object
<CustomObject>
    <description>Created for case: 01353503</description>
    <fields>
        <fullName>Active__c</fullName>
        <description>Created for: 01353503</description>
        <label>Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Vetify_Report__c</fullName>
        <label>Closed(Vetify Report)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_Percentage__c</fullName>
        <description>Created for: 01353503</description>
        <label>Completed%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <description>Created for: 01353503</description>
        <label>Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_to_Total__c</fullName>
        <description>Created for: 01353503</description>
        <label>Completed to Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pending__c</fullName>
        <description>Created for case: 01353503</description>
        <label>Pending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Month__c</fullName>
        <description>Give the name of the month prior to the created date as the Vetify report is for the case status of cases created in the previous month.</description>
        <formula>Case(
				MONTH(DATEVALUE(CreatedDate)),
					1, &quot;December&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))-1),
					2, &quot;January&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))),
					3, &quot;February&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))),
					4, &quot;March&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))),
					5, &quot;April&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))),
					6, &quot;May&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))),
					7, &quot;June&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))),
					8, &quot;July&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))),
					9, &quot;August&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))),
					10, &quot;September&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))),
					11, &quot;October&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))),
					12, &quot;November&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))),
				 &quot;Error&quot;
					)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a snapshot for cases created in this month.</inlineHelpText>
        <label>Report Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Vetify_Report__c</fullName>
        <label>Total(Vetify Report)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vetify Monthly Stats Snapshot</label>
    <nameField>
        <label>Vetify Monthly Stats Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vetify Monthly Stats Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>